# tailwind-fuse

./: .cargo-rdme.toml  Cargo.toml  README.md  deploy.sh  publish.sh  why-tailwind-fuse.md
example/demo/: .gitignore  Cargo.toml  README.md  bun.lockb  index.html  input.css  package.json  tailwind.config.js
example/demo/src/: app.rs  button.rs  main.rs  prism.js  title.rs
example/demo/src/component/: badge.rs  button.rs  card.rs  mod.rs  typography.rs
example/demo/style/: output.css
fuse/: Cargo.toml
fuse/benches/: merge.rs
fuse/src/: join.rs  lib.rs
fuse/src/ast/: mod.rs  parser.rs
fuse/src/core/: join.rs  mod.rs
fuse/src/core/merge/: config.rs  get_collision_id.rs  get_collisions.rs  merge_impl.rs  mod.rs  validators.rs
fuse/src/fuse/: mod.rs
fuse/src/fuse/merge/: get_collision_id.rs  merge_impl.rs  mod.rs  parser.rs
fuse/src/merge/: merge_impl.rs  mod.rs  parser.rs  validators.rs
fuse/tests/: group-conflicts.rs  group_conflicts.rs  merge.rs  override.rs  variant-macro.rs  variant_macro.rs
merge/: Cargo.toml
merge/benches/: merge.rs
merge/src/: cache.rs  join.rs  lib.rs  merge.rs  val_or_ref.rs
merge/src/merge/: conflict.rs  merge.rs  merge_impl.rs  mod.rs  parser.rs  validators.rs
merge/tests/: group-conflicts.rs  merge.rs  override.rs
model/: Cargo.toml
model/src/: error.rs  lib.rs  utils.rs
model/src/instruction/: display.rs  mod.rs  parser.rs
model/src/macros/: mod.rs
model/src/macros/exported/: mod.rs
model/src/macros/sealed/: mod.rs
model/src/modules/: mod.rs
model/src/modules/accessibility/screen_reader/: mod.rs
model/src/modules/background/: attachment.rs  clip.rs  mod.rs  origin.rs  position.rs  repeat.rs  size.rs
model/src/modules/background/attachment/: mod.rs
model/src/modules/background/clip/: mod.rs
model/src/modules/background/color/: mod.rs
model/src/modules/background/gradient/: mod.rs
model/src/modules/background/image/: mod.rs
model/src/modules/background/origin/: mod.rs
model/src/modules/background/position/: mod.rs
model/src/modules/background/repeat/: mod.rs
model/src/modules/background/size/: mod.rs
model/src/modules/borders/: mod.rs
model/src/modules/borders/divide/: mod.rs
model/src/modules/borders/outline/: mod.rs
model/src/modules/effects/: mod.rs
model/src/modules/effects/box_shadow/: mod.rs
model/src/modules/effects/mix_blend/: mod.rs
model/src/modules/effects/mix_blend_bg/: mod.rs
model/src/modules/effects/opacity/: mod.rs
model/src/modules/effects/shadow_color/: mod.rs
model/src/modules/filters/: mod.rs
model/src/modules/filters/blur/: mod.rs
model/src/modules/filters/brightness/: mod.rs
model/src/modules/filters/contrast/: mod.rs
model/src/modules/filters/grayscale/: mod.rs
model/src/modules/filters/hue_rotate/: mod.rs
model/src/modules/filters/invert/: mod.rs
model/src/modules/filters/saturate/: mod.rs
model/src/modules/filters/sepia/: mod.rs
model/src/modules/flexbox/: mod.rs
model/src/modules/flexbox/basis/: mod.rs
model/src/modules/flexbox/content/: mod.rs
model/src/modules/flexbox/flex/: mod.rs
model/src/modules/flexbox/gap/: mod.rs
model/src/modules/flexbox/grid/: mod.rs
model/src/modules/flexbox/grow/: mod.rs
model/src/modules/flexbox/items/: mod.rs
model/src/modules/flexbox/justify/: mod.rs
model/src/modules/flexbox/order/: mod.rs
model/src/modules/flexbox/place/: mod.rs
model/src/modules/flexbox/shrink/: mod.rs
model/src/modules/flexbox/span/: mod.rs  resolve.rs
model/src/modules/flexbox/zelf/: mod.rs
model/src/modules/interactivity/: mod.rs
model/src/modules/interactivity/accent/: mod.rs
model/src/modules/interactivity/appearance/: mod.rs
model/src/modules/interactivity/caret/: mod.rs
model/src/modules/interactivity/cursor/: mod.rs
model/src/modules/interactivity/pointer/: mod.rs
model/src/modules/interactivity/resize/: mod.rs
model/src/modules/interactivity/scroll/: mod.rs
model/src/modules/interactivity/select/: mod.rs
model/src/modules/interactivity/snap/: mod.rs
model/src/modules/interactivity/torch/: mod.rs
model/src/modules/interactivity/will_change/: mod.rs
model/src/modules/layouts/: mod.rs
model/src/modules/layouts/aspect_ratio/: aspect.rs  mod.rs
model/src/modules/layouts/clear/: mod.rs
model/src/modules/layouts/columns/: cols.rs  mod.rs
model/src/modules/layouts/container/: mod.rs
model/src/modules/layouts/display/: mod.rs
model/src/modules/layouts/float/: mod.rs
model/src/modules/layouts/isolate/: mod.rs
model/src/modules/layouts/object/: mod.rs
model/src/modules/layouts/overflow/: mod.rs
model/src/modules/layouts/overscroll/: mod.rs
model/src/modules/layouts/placement/: bottom.rs  inset.rs  left.rs  mod.rs  right.rs  top.rs
model/src/modules/layouts/position/: mod.rs
model/src/modules/layouts/visible/: mod.rs
model/src/modules/layouts/z_index/: mod.rs
model/src/modules/sizing/: builder.rs  display.rs  mod.rs
model/src/modules/spacing/: mod.rs  size.rs
model/src/modules/spacing/margin/: mod.rs
model/src/modules/spacing/margin_scroll/: mod.rs
model/src/modules/spacing/space/: mod.rs
model/src/modules/svg/: mod.rs
model/src/modules/tables/: mod.rs
model/src/modules/transforms/: mod.rs
model/src/modules/transition/: mod.rs
model/src/modules/typography/: mod.rs
model/src/systems/: mod.rs
model/src/systems/arbitrary/: methods.rs  mod.rs
model/src/systems/colors/: mod.rs
model/src/systems/effect_system/: builtin.rs  mod.rs
model/src/systems/font_system/: mod.rs
model/src/systems/instruction/: display.rs  mod.rs  resolver.rs
model/src/systems/units/: axis_2d.rs  axis_xy.rs  mod.rs
model/src/traits/: mod.rs
public/: Cargo.toml
public/src/: lib.rs
variant-macro/: Cargo.toml
variant-macro/src/: class_macro.rs  lib.rs  model.rs  variant_macro.rs
variant-macro/tests/: test.rs
(+129 files in other folders)
