[package]
name = "tailwind_fuse"
version = "0.3.1"
edition = "2021"
authors = ["Nico Burniske", "Gaucho Labs"]
description = "Tailwind Merge and Variants"
keywords = ["tailwind", "css", "variant", "rust", "leptos"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/gaucho-labs/tailwind-fuse"

[dependencies]
nom = {version = "7"}
tailwind_fuse_macro = { path = "../variant-macro", version = "0.3.0", optional = true }

[dev-dependencies]
divan = "0.1.14"
fastrand = "2"

[[bench]]
name = "merge"
harness = false

[features]
variant = ["tailwind_fuse_macro"]
debug = []

[package.metadata.docs.rs]
all-features = true
