[package]
name = "tw-merge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tailwind-ast = "=0.4.1"
lru = "0.12.3"
regex-lite = "0.1.5"
lazy_static = "1.4.0"

[dev-dependencies]
divan = "0.1.14"
fastrand = "2"

[[bench]]
name = "merge"
harness = false