[package]
name = "tw-merge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
nom = "7.1.3"

[dev-dependencies]
divan = "0.1.14"
fastrand = "2"

[[bench]]
name = "merge"
harness = false
