[package]
name = "tailwind-model"
version = "0.1.0"
license = "MPL-2.0"
edition = "2021"

[dependencies]
tailwind-ast = "=0.4.1"

[dev-dependencies]

[features]
default = []
# More compile-time checks, hardcoding adds some bulk and slows things down a bit
# You can remove these checks as a runtime framework
compile_time = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
