[package]
name = "tailwind_merge"
version = "0.1.0"
edition = "2021"
authors = ["Nico Burniske", "Gaucho Labs"]
description = "Tailwind Merge and Variants"
keywords = ["tailwind", "variants", "leptos"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/gaucho-labs/tailwind-utils"

[dependencies]
tw-fuse = { path = "../fuse" }
tw-variant-macro = { path = "../variant-macro", optional = true }
tw-utils = { path = "../utils", optional = true }

[features]
variant = ["tw-variant-macro", "tw-utils"]
debug = ["tw-fuse/debug"]
