[package]
name = "tailwind_fuse"
version = "0.1.0"
edition = "2021"
authors = ["Nico Burniske", "Gaucho Labs"]
description = "Tailwind Merge and Variants"
keywords = ["tailwind", "variants", "leptos"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/gaucho-labs/tailwind-fuse"

[dependencies]
tw_fuse = { path = "../fuse", version = "0.1.0" }
tw_variant_macro = { path = "../variant-macro", version = "0.1.0", optional = true }
tw_utils = { path = "../utils", version = "0.1.0", optional = true }

[features]
variant = ["tw_variant_macro", "tw_utils"]
debug = ["tw_fuse/debug"]

[package.metadata.docs.rs]
all-features = true
