[package]
name = "tailwind_fuse_macro"
version = "0.2.0"
edition = "2021"
authors = ["Nico Burniske", "Gaucho Labs"]
description = "Macros for tailwind-fuse"
keywords = ["tailwind", "variants", "leptos"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/gaucho-labs/tailwind-fuse"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"

